force-app/main/default/objects/Account/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <label>CIN</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>