force-app/main/default/objects/Account/fields/Civility__c.field-meta.xml
<CustomField>
    <fullName>Civility__c</fullName>
    <label>Civilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>