force-app/main/default/objects/Account/fields/codeTier__c.field-meta.xml
<CustomField>
    <fullName>codeTier__c</fullName>
    <label>Code prestataire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>