force-app/main/default/objects/Account/fields/ConditionOfPerson__c.field-meta.xml
<CustomField>
    <fullName>ConditionOfPerson__c</fullName>
    <label>Etat de la personne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indemne</fullName>
            </value>
            <value>
                <fullName>Blessé</fullName>
            </value>
            <value>
                <fullName>Décédé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>