force-app/main/default/objects/Account/fields/Conventionne__c.field-meta.xml
<CustomField>
    <fullName>Conventionne__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si le prestataire (garagiste/concessionnaire) est conventionné avec la compagnie.</description>
    <label>Conventionné</label>
    <type>Checkbox</type>
</CustomField>