force-app/main/default/objects/Account/fields/DateDeNaissance__c.field-meta.xml
<CustomField>
    <fullName>DateDeNaissance__c</fullName>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>