force-app/main/default/objects/Account/fields/DateOfIssue__c.field-meta.xml
<CustomField>
    <fullName>DateOfIssue__c</fullName>
    <label>Date de délivrance</label>
    <type>Date</type>
</CustomField>