force-app/main/default/objects/Account/fields/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <label>N° de permis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>