force-app/main/default/objects/Account/fields/MoyenNotification__c.field-meta.xml
<CustomField>
    <fullName>MoyenNotification__c</fullName>
    <label>Moyen de notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>Email et Téléphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>