force-app/main/default/objects/Account/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <label>Nom Complet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>