force-app/main/default/objects/Account/fields/Origine_du_permis__c.field-meta.xml
<CustomField>
    <fullName>Origine_du_permis__c</fullName>
    <label>Origine du permis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Etranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>