force-app/main/default/objects/Account/fields/Prenom__c.field-meta.xml
<CustomField>
    <fullName>Prenom__c</fullName>
    <label>Prenom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>