force-app/main/default/objects/Account/fields/TypeDePrestataire__c.field-meta.xml
<CustomField>
    <fullName>TypeDePrestataire__c</fullName>
    <label>Type De Prestataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expert Automobile</fullName>
            </value>
            <value>
                <fullName>Garagiste</fullName>
            </value>
            <value>
                <fullName>Avocat</fullName>
            </value>
            <value>
                <fullName>Médecin</fullName>
            </value>
            <value>
                <fullName>Clinique</fullName>
            </value>
            <value>
                <fullName>Centre radiologique</fullName>
            </value>
            <value>
                <fullName>Pharmacie</fullName>
            </value>
            <value>
                <fullName>Hôpital</fullName>
            </value>
            <value>
                <fullName>Enquêteur</fullName>
            </value>
            <value>
                <fullName>Réparateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>