force-app/main/default/objects/Account/fields/TypeMedecin__c.field-meta.xml
<CustomField>
    <fullName>TypeMedecin__c</fullName>
    <label>Type Medecin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Médecin conseil</fullName>
            </value>
            <value>
                <fullName>Médecin médicolégal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>