force-app/main/default/objects/Account/fields/TypeOfLicense__c.field-meta.xml
<CustomField>
    <fullName>TypeOfLicense__c</fullName>
    <label>Type de permis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permis A : Motocycles</fullName>
            </value>
            <value>
                <fullName>Permis B : Véhicules légers (voitures particulières et petits utilitaires)</fullName>
            </value>
            <value>
                <fullName>Permis E : Véhicules avec remorque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>