force-app/main/default/objects/Account/fields/TypePersonne__c.field-meta.xml
<CustomField>
    <fullName>TypePersonne__c</fullName>
    <label>Type de personne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personne physique</fullName>
            </value>
            <value>
                <fullName>Personne morale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>