force-app/main/default/objects/Account/fields/Ville__c.field-meta.xml
<CustomField>
    <fullName>Ville__c</fullName>
    <label>Ville</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pays__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Ville</valueSetName>
    </valueSet>
</CustomField>