force-app/main/default/objects/Account/recordTypes/CompagnieAdverse.recordType-meta.xml
<RecordType>
    <fullName>CompagnieAdverse</fullName>
    <active>true</active>
    <label>Compagnie Adverse</label>
</RecordType>