force-app/main/default/objects/Account/recordTypes/Passager.recordType-meta.xml
<RecordType>
    <fullName>Passager</fullName>
    <active>true</active>
    <label>Passager</label>
</RecordType>