force-app/main/default/objects/Account/recordTypes/Prestataire.recordType-meta.xml
<RecordType>
    <fullName>Prestataire</fullName>
    <active>true</active>
    <label>Prestataire</label>
</RecordType>